--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                     </p>
                   </div>
                   <div class="card-links">
-                    <a class="link" href="learn.html">Läs mer om lära</a>
+                    <a class="link" href="learn.html">Läs mer</a>
                     <a href="mailto:info@clearity.nu" class="btn btn-primary">Boka</a>
                   </div>
                 </div>
@@ -160,13 +160,13 @@
                   <div>
                     <h3 class="card-title">Self Love</h3>
                     <p class="card-text">
-                      Börja med dig själv.
+                      Det börjar med dig själv.
                       <br />
                       <i>Autensitet, sanning och värme</i>
                     </p>
                   </div>
                   <div class="card-links">
-                    <a class="link" href="selfLove.html">Läs mer om self love</a>
+                    <a class="link" href="selfLove.html">Läs mer</a>
                     <a href="https://www.bokadirekt.se/places/KLARHET-samtal-och-halsoradgivning-56156?sr=31F3C368_E022_49E3_BAEE_974FB1558ECB" class="btn btn-primary" target="_blank">Boka</a>
                   </div>
                 </div>
@@ -185,7 +185,7 @@
                     </p>
                   </div>
                   <div class="card-links">
-                    <a class="link" href="search.html">Läs mer om leta</a>
+                    <a class="link" href="search.html">Läs mer</a>
                     <a href="https://www.bokadirekt.se/places/KLARHET-samtal-och-halsoradgivning-56156?sr=31F3C368_E022_49E3_BAEE_974FB1558ECB" class="btn btn-primary" target="_blank">Boka</a>
                   </div>
                 </div>
@@ -204,7 +204,7 @@
                     </p>
                   </div>
                   <div class="card-links">
-                    <a class="link" href="live.html">Läs mer om leva</a>
+                    <a class="link" href="live.html">Läs mer</a>
                     <a href="https://www.bokadirekt.se/places/KLARHET-samtal-och-halsoradgivning-56156?sr=31F3C368_E022_49E3_BAEE_974FB1558ECB" class="btn btn-primary" target="_blank">Boka</a>
                   </div>
                 </div>
@@ -221,11 +221,11 @@
                     <p class="card-text">
                       Kroppens signaler, så påverkar du din hälsa.
                       <br />
-                      <i>Soul, body and mind</i>
+                      <i>Soul, Body and Mind</i>
                     </p>
                   </div>
                   <div class="card-links">
-                    <a class="link" href="listen.html">Läs mer om lyssna</a>
+                    <a class="link" href="listen.html">Läs mer</a>
                     <a href="https://www.bokadirekt.se/places/KLARHET-samtal-och-halsoradgivning-56156?sr=857CF2F2_6A59_4737_AC82_B0AD009F67A5" class="btn btn-primary" target="_blank">Boka</a>
                   </div>
                 </div>
@@ -244,7 +244,7 @@
                     </p>
                   </div>
                   <div class="card-links">
-                    <a class="link" href="leadership.html">Läs mer om ledarskap</a>
+                    <a class="link" href="leadership.html">Läs mer</a>
                     <a href="mailto:katarina@clearity.nu" class="btn btn-primary">Boka</a>
                   </div>
                 </div>
@@ -263,7 +263,7 @@
                     </p>
                   </div>
                   <div class="card-links">
-                    <a class="link" href="longing.html">Läs mer om längtan</a>
+                    <a class="link" href="longing.html">Läs mer</a>
                     <a href="https://www.bokadirekt.se/places/KLARHET-samtal-och-halsoradgivning-56156?sr=31F3C368_E022_49E3_BAEE_974FB1558ECB" class="btn btn-primary" target="_blank">Boka</a>
                   </div>
                 </div>
@@ -276,12 +276,12 @@
                   <div>
                     <h3 class="card-title">Leka</h3>
                     <p class="card-text">
-                      Vågar du gå utanför din konfortzon?
+                      Vågar du gå utanför din komfortzon?
                       <i>Meningsfullhet, insikter och kärlek till livet</i>
                     </p>
                   </div>
                   <div class="card-links">
-                    <a class="link" href="play.html">Läs mer om leka</a>
+                    <a class="link" href="play.html">Läs mer</a>
                     <a href="https://www.bokadirekt.se/places/KLARHET-samtal-och-halsoradgivning-56156?sr=31F3C368_E022_49E3_BAEE_974FB1558ECB" class="btn btn-primary" target="_blank">Boka</a>
                   </div>
                 </div>
