--- a/listen.html
+++ b/listen.html
@@ -49,7 +49,7 @@
               <p>
                 <b>Samtal</b>
                 <br />
-                • Livsstilsguidning. Komplett kartläggning av kroppens signaler och livsstilsrelaterade åtgärden och mål.
+                • Livsstilsguidning. Komplett kartläggning av kroppens signaler och livsstilsrelaterade åtgärder och mål.
                 <br />
                 • Du återfår din kraft och möjlighet att påverka din hälsa och skapa det liv du önskar.
                 <br />
