--- a/live.html
+++ b/live.html
@@ -49,7 +49,7 @@
               <p>
                 <b>Samtal</b>
                 <br />
-                • Finn tillit till dig själv och dina förmågor?
+                • Finn tillit till dig själv och dina förmågor.
                 <br />
                 • Vi identifierar gemensamt eventuella hinder och programmeringar som inte gynnar dig.
                 <br />
