--- a/longing.html
+++ b/longing.html
@@ -57,6 +57,7 @@
                 <br />
                 • Vi bygger förbundenhet, trygghet och värme i relationer.
                 <br />
+                <br>
                 Våra förhoppningar är att fördjupa dina relationer, ge vingar till dina drömmar och skapa ny förståelse för dig själv i förhållande till andra.
                 <br />
                 <br />
@@ -70,7 +71,7 @@
               </p>
               <div class="link ij-db">
                 <a class="btn btn-dark btn-social mx-2" href="https://www.bokadirekt.se/places/KLARHET-samtal-och-halsoradgivning-56156?sr=31F3C368_E022_49E3_BAEE_974FB1558ECB" aria-label="Länk till Katarinas bokadirekt">Boka samtal</a>
-                <a class="btn btn-dark btn-social mx-2" href="https://www.bokadirekt.se/places/klarhet-samtal-och-halsoradgivning-56156?sr=857CF2F2_6A59_4737_AC82_B0AD009F67A5 " aria-label="Länk till Annas mail">Boka workshop</a>
+                <a class="btn btn-dark btn-social mx-2" href="mailto:anna@clearity.nu" aria-label="Länk till Annas mail">Boka workshop</a>
               </div>
             </div>
           </div>
