--- a/aboutUs.html
+++ b/aboutUs.html
@@ -48,7 +48,7 @@
                   Vår passion är att guida dig till ett liv där du lever fullt ut, med KLARHET och autenticitet. KLARHET grundades av oss Anna och Katarina med en vision om att främja hälsa och välbefinnande på ett holistiskt sätt. Vi kombinerar vår erfarenhet inom sjukvård, beteendevetenskap och ledarskap för att erbjuda skräddarsydda tjänster som passar just dig och dina behov. 
                    <br>
                    <br>
-                  Vi tror på kraften i samtal, självreflektion och personlig utveckling. Oavsett var du är på din resa, är du välkommen att utforska våra tjänster och ta det första steget mot en klarare och mer meningsfull tillvaro.
+                  Vi tror på kraften i samtal, självreflektion och personlig utveckling. Oavsett var du är på din resa är du välkommen att utforska våra tjänster och ta det första steget mot en klarare och mer meningsfull tillvaro.
                 </p>
               </div>
             </div>
@@ -71,7 +71,7 @@
                 För mig är reflektion och kommunikation den allra viktigaste framgångsfaktorn, likväl med dig själv som med andra.  
                 <br>
                 <br>
-                Framgång, vad är det för dig? För mig är det dels förbundenhet och autenticitet, dels är det att skapa goda resultat. 
+                Framgång, vad är det för dig? För mig är det dels förbundenhet och autenticitet, dels är det att skapa goda, hållbara resultat. 
               </p>
               <p>Kontakta mig</p>
             </div>
