--- a/leadership.html
+++ b/leadership.html
@@ -49,13 +49,13 @@
               <p>
                 <b>Ledarskapsutbildning</b>
                 <br />
-                • Bli din egen ledare, utveckla ett gott självledarskap
+                • Bli din egen ledare, utveckla ett gott självledarskap.
                 <br />
                 • Leder du din organisation så som du önskar?
                 <br />
-                • Kultur för framgångsrika organisationer
+                • Kultur för framgångsrika organisationer.
                 <br />
-                • Ledningsgrupps- och grupputveckling
+                • Ledningsgrupps- och grupputveckling.
                 <br />
                 • Goda resultat, tillsammans, på vilket sätt?
                 <br />
