--- a/learn.html
+++ b/learn.html
@@ -81,7 +81,7 @@
                 <br />
                 <b>3. ORGANISATION och LEDARSKAP</b>
                 <br />
-                • Tillhör ni en organisation och är intresserade av vårt utbud så välkomnar vi er att läsa mer under ORGANISATION.
+                • Tillhör ni en organisation och är intresserade av vårt utbud så välkomnar vi er att läsa mer under <a href="organisation.html">ORGANISATION</a> eller kontakta <a href="mailto:katarina@clearity.nu">katarina@clearity.nu</a>.
                 <br />
                 <br />
                 Utbildningstillfällen annonseras via hemsida, sociala medier och via vårt månadsbrev.
