--- a/aboutCompany.html
+++ b/aboutCompany.html
@@ -43,7 +43,9 @@
             <div class="row justify-content-center ij-section__content">
               <div>
                 <p>
-                  Efter att ha arbetat med beprövade metoder och tillvägagångssätt i många år förenades våra vägar i frågan kring varför så mycket ändå förblir detsamma? Orsak och verkan, individualism eller tillsammansskap? Vi vet att du kan så mycket mer än du anar, vi vet att resultatet i alla organisationer blir bättre när vi gör det tillsammans, på riktigt, vi vet att förbundenhet och nära relationer är allt. Nu är tiden inne för att göra allt på helt nytt sätt, med KLARHET.
+                  Efter att ha arbetat med beprövade metoder och tillvägagångssätt i många år förenades våra vägar i frågan kring varför så mycket ändå förblir detsamma? 
+                  Orsak och verkan, individualism eller tillsammansskap? Vi vet att du kan så mycket mer än du anar, vi vet att resultatet i alla organisationer blir bättre när vi 
+                  gör det tillsammans, på riktigt, vi vet att förbundenhet och nära relationer är allt. Nu är tiden inne för att göra allt på helt nytt sätt, med KLARHET.
                   <br />
                   <br />
                   Katarina har lång erfarenhet inom ledarskap, samtal och kommunikation. Oavsett om drivkraften i att utvecklas ligger på det privata planet eller i yrkeslivet är vår erfarenhet att kommunikation och relation är två avgörande parametrar. Katarina arbetar både med människa och med organisation inom kommunikation, relationer, grupputveckling, kultur och värderingar samt med samtal.
