--- a/aboutUs.html
+++ b/aboutUs.html
@@ -68,10 +68,10 @@
                 <br>
                 Jag har lång erfarenhet av att möta människor och via samtal komma vidare, framåt. Mitt huvuduppdrag har varit att leda, både människor, organisationer och samtal. 
                 Jag har jobbat med stöd till chefer och ledare, till grupper och faciliterat många samtal. 
-                För mig är reflektion och kommunikation den allra viktigaste framgångsfaktorn, likväl med dig själv som med andra.  
+                För mig är reflektion och kommunikation den allra viktigaste framgångsfaktorn, i alla relationer. 
                 <br>
                 <br>
-                Framgång, vad är det för dig? För mig är det dels förbundenhet och autenticitet, dels är det att skapa goda, hållbara resultat. 
+                Framgång, vad är det för dig? För mig är det dels förbundenhet och autenticitet, dels är det att skapa goda resultat. 
               </p>
               <p>Kontakta mig</p>
             </div>
