--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                   <div>
                     <h3 class="card-title">Leva</h3>
                     <p class="card-text">
-                      Livet ska levas och inte bara överlevas.
+                      Livet ska levas, inte bara överlevas.
                       <br />
                       <i>Styrka, stabilitet och självkänsla</i>
                     </p>
@@ -238,9 +238,9 @@
                   <div>
                     <h3 class="card-title">Ledarskap</h3>
                     <p class="card-text">
-                      Når du dom resultat du önskar?
+                      Att framgångsrikt leda - Aktivt medarbetarskap - Grupp och individ  
                       <br />
-                      <i>Målbild, gemenskap och insperation</i>
+                      <i>Autensitet, tillsammansskap och resultat</i>
                     </p>
                   </div>
                   <div class="card-links">
