--- a/leadership.html
+++ b/leadership.html
@@ -41,7 +41,7 @@
               <div>
                 <h1>Ledarskap</h1>
                 <p class="card-text">
-                  Att framgångsrikt leda, aktivt medarbetarskap, grupp och individ.  
+                  Att framgångsrikt leda - Aktivt medarbetarskap - Grupp och individ   
                   <br />
                   <i>Autensitet, tillsammansskap och resultat </i>
                 </p>
