--- a/organisation.html
+++ b/organisation.html
@@ -46,15 +46,11 @@
                 Katarina:
                 <br />
                 <i>
-                  Efter att ha verkat i rollen som chef och ledare har jag lärt mig massor, både om vem jag är och hur jag vill vara som ledare och vad som fungerat och vad som fungerat mindre bra. Viktigt för mig har varit att vi dels byter bilder och kommunicerar oss igenom det som är svårt och det som gör motstånd, dels att främja en kultur som kännetecknas av omtanke, värme och tillsammansskap.
-                  <br />
-                  <br />
-                  Det är tillsammans vi skapar det goda resultatet. Vill du leda på det autentiska sätt du faktiskt längtar efter? Är människan verkligen den viktigaste komponenten i er organisations framgång? Lever du ett ledarskap som främjar det? Om inte, låt oss prata om hur du kan bli en ännu större kraft i att ändra och förändra och använda hela din förmåga. Är du redan där och vill fortsätta bolla och utvecklas, låt oss mötas och se om vi tillsammans kan flytta fram horisonten
-                  ytterligare?
+                  Efter att ha verkat i rollen som chef och ledare har jag lärt mig massor, både om vem jag är och hur jag vill vara som ledare och vad som fungerat och vad som fungerat mindre bra. Viktigt för mig har alltid varit tydlighet och att vi dels byter bilder och kommunicerar oss igenom det som är svårt och det som gör motstånd, dels att främja en kultur som kännetecknas av omtanke, värme och tillsammansskap. 
                   <br />
                   <br />
                 </i>
-                Välkommen
+                Varmt Välkommen
               </p>
             </div>
           </div>
